[flake8]
max-line-length=120
max-complexity=10

[isort]
line_length = 120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = polint

[metadata]
name = polint
version = 0.3
platform = any
description = Linter for gettext PO files
long-description = file: README.rst, CHANGELOG.rst
keywords = gettext, linter
home-page = https://github.com/ziima/polint
author-email = vlastimil.zima@gmail.com
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities

[options]
setup_requires = setuptools>=39.2
install_requires =
    docopt
    polib
python_requires = >2.6,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
py_modules = polint

[options.extras_require]
quality =
    flake8
    isort
    pydocstyle
tests =
    mock

[options.entry_points]
console_scripts =
    polint = polint:main
