[metadata]
name = polint
version = 0.5
platform = any
description = Linter for gettext PO files
long_description = file: README.rst, CHANGELOG.rst
keywords = gettext, linter
home_page = https://github.com/ziima/polint
author_email = vlastimil.zima@gmail.com
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities

[options]
install_requires =
    docopt
    polib
python_requires = ~=3.9
py_modules = polint

[options.extras_require]
quality =
    flake8
    isort
    pydocstyle
tests =
    mock

[options.entry_points]
console_scripts =
    polint = polint:main

[flake8]
max-line-length=120
max-complexity=10

[isort]
line_length = 120
combine_as_imports = true
default_section = THIRDPARTY
known_first_party = polint
